--- a/jdbsfub.html
+++ b/jdbsfub.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-<p>jusbuvbuivuia</p>
-<a href="jdbsfub.html"></a>
+    <h2>jbfjfvqukvfkuvewkufvewkufvukewvfukewvfukewvukefvkef</h2>
 </body>
 </html>
